--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -22,7 +22,7 @@
     color: @white-color;
 
     &:focus {
-      outline: 1px dotted @white-color;
+      outline: 1px solid @white-color;
       outline-offset: 2px;
     }
   }
@@ -159,7 +159,7 @@
   }
 
   &:focus {
-    outline: 1px dotted @white-color;
+    outline: 1px solid @white-color;
   }
 
   &.open {
@@ -280,6 +280,7 @@
       display: block;
       position: relative;
       padding: 7px 0 0;
+      margin-right: 5px;
 
       &::before {
         content: '';
