--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -262,7 +262,7 @@
   transition: height 0.4s ease;
   -webkit-overflow-scrolling: touch;
   &:focus {
-    .tab-focus-v2();
+    outline: 1px solid @white-color;
     outline-offset: 2px;
   }
 }
