--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -8497,60 +8497,62 @@ ul.sf-menu li a:hover {
   margin: 10px 0;
 }
 
-.customcheck {
-  position: relative;
-  display: block;
-  padding-left: 30px !important;
-  margin: 4px 4px 12px 0;
-  font-size: 22px;
-  cursor: default !important;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.ccc-large-checkbox {
+    margin: 0;
+    padding: 0
 }
 
-.customcheck input {
-  position: absolute;
-  margin: 0;
-  opacity: 0;
+.ccc-large-checkbox>input[type=checkbox] {
+    position: absolute;
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    clip: rect(1px,1px,1px,1px);
+    -webkit-clip-path: inset(50%);
+    clip-path: inset(50%)
 }
 
-.customcheck input:checked~.checkmark {
-  background-color: #005cc8;
-  border: 1px solid #999;
-  border-radius: 2px;
+.ccc-large-checkbox>input[type=checkbox]+label {
+    display: block;
+    position: relative;
+    padding: 7px 0 0;
+    margin-right: 5px
 }
 
-.customcheck input:checked~.checkmark::after {
-  display: block;
+.ccc-large-checkbox>input[type=checkbox]+label::before {
+    content: '';
+    position: relative;
+    display: inline-block;
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 2px;
+    border: 1px solid #999
 }
 
-.customcheck .checkmark::after {
-  top: 1px;
-  left: 6px;
-  width: 5px;
-  height: 10px;
-  border: solid #fff;
-  border-width: 0 3px 3px 0;
-  transform: rotate(45deg);
+.ccc-large-checkbox>input[type=checkbox]:checked+label::before {
+    background: #005cc8
 }
 
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 20px;
-  height: 20px;
-  background-color: #ddd;
-  border: 1px solid #666;
-  border-radius: 2px;
+.ccc-large-checkbox>input[type=checkbox]:checked+label::after {
+    content: '';
+    position: absolute;
+    top: 13px;
+    left: 4px;
+    border-left: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+    height: 6px;
+    width: 13px;
+    transform: rotate(-45deg)
 }
 
-.checkmark::after {
-  position: absolute;
-  display: none;
-  content: "";
+.ccc-large-checkbox>input[type=checkbox]:focus+label::before {
+    outline: 1px solid #fff;
+    outline-offset: 2px
 }
 
 .ccc-table-wrapper {
@@ -8559,6 +8561,11 @@ ul.sf-menu li a:hover {
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   transition: height .4s ease;
+}
+
+.ccc-table-wrapper:focus {
+    outline: 1px solid #fff;
+    outline-offset: 2px
 }
 
 .ccc-table {
