--- a/less/navbar.less
+++ b/less/navbar.less
@@ -662,6 +662,7 @@
   a {
     &:focus {
       outline: 1px dotted @white-color;
+      outline-offset: -2px;
     }
   }
   background-color: @navbar-inverse-bg;
