--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -73,11 +73,11 @@
 
   .tiles-x & {
     // Truncate to avoid overflowing text
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
+    // -webkit-line-clamp: 4;
+    // -webkit-box-orient: vertical;
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+    // display: -webkit-box;
   }
 }
 
@@ -224,18 +224,18 @@ body:not(.FullWidthFrontpage) .double-column {
       .tilebox {
         height: @special-tiles-hight;
 
-        .tile-header {
-          -webkit-line-clamp: 3;
-        }
+        // .tile-header {
+        //   -webkit-line-clamp: 3;
+        // }
 
         .tile-body {
           display: block;
-          // flex: 1;
-          -webkit-line-clamp: 4;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          display: -webkit-box;
+          flex: 1;
+          // -webkit-line-clamp: 4;
+          // -webkit-box-orient: vertical;
+          // overflow: hidden;
+          // text-overflow: ellipsis;
+          // display: -webkit-box;
 
           &:after {
             content: '';
