--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -59,6 +59,24 @@ blockquote.full-width::before {
   font-size: 17px;
 }
 
+[itemprop=video]::after {
+  /* Set video title as visible caption */
+  content: attr(title);
+  font-size: 13px;
+  max-width: 521px;
+  margin-left: calc(16.66666667% + 4px);
+  display: block;
+  color: #757575;
+  border-bottom: 1px solid #dfdfdf;
+  padding: 10px 0;
+}
+
+[itemprop=video]:not([title])::after,
+[itemprop=video][title='']::after {
+  /* If no video title, hide caption box */
+  display: none;
+}
+
 @media (min-width: 992px) {
   .title {
     font-size: 40px;
@@ -153,7 +171,8 @@ blockquote.full-width::before {
   }
 
   .widenews-content :not(.image)>img:not([class]) {
-    /* img:not([class]) is used since the editor inserts img without right/left alignment without a class. Remove when fixed. https://redmine.magenta-aps.dk/issues/43692 */
+    /* img:not([class]) is used since the editor inserts img without right/left alignment without a class.
+    Remove when fixed. https://redmine.magenta-aps.dk/issues/43692 */
     margin: 23px calc(-25% - 7px) 23px calc(-25% - 7px);
     max-width: 757px;
     float: none !important;
@@ -165,6 +184,11 @@ blockquote.full-width::before {
 
   [itemprop="video"], .embed-responsive {
     margin: 30px calc(-25% - 7px) 30px calc(-25% - 7px);
+  }
+
+  [itemprop=video]::after {
+    /* Set video title as visible caption */
+    margin-left: calc(16.66666667% + 4px);
   }
 
   .figure-caption, figcaption {
