--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -102,7 +102,7 @@
     margin-bottom: 5px;
     // If no category, align date to the left
     &:empty {
-      display: none;
+      visibility: hidden;
 
       & + .date {
         padding-left: 0;
