Mobile menu desktop fix

--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -3,8 +3,8 @@
 // --------------------------------------------------
 /* Media queries */
 @media (min-width: @screen-sm) {
-  #mobileleftmenu {
-    display: none;
+  #mobileleftmenu, .mm-wrapper__blocker {
+    display: none!important;
   }
 
   .mm-page {
