Gridbox header line-height

--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -40,7 +40,7 @@
       h3 {
         font-size: inherit;
         font-weight: inherit;
-        line-height: inherit;
+        line-height: @line-height-small;
         letter-spacing: inherit;
         margin: 0;
       }
