--- a/less/ku-tiles.less
+++ b/less/ku-tiles.less
@@ -229,7 +229,7 @@ body:not(.FullWidthFrontpage) .double-column {
           display: block;
           flex: 1;
 
-          > .tile-teaser, p { // Remove "p" when this is is implemented: https://redmine.magenta-aps.dk/issues/44967
+          > .tile-teaser {
             // Truncate to avoid overflowing text
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
