--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -70,7 +70,7 @@
     padding: 10px;
     position: relative;
     flex: 1 1 50%; // 0 1 auto?
-    // overflow: hidden;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     //@media all and (min-width: @screen-sm) {
