--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -18,6 +18,11 @@ tag-selection {
     float: none;
     color: @white-color;
     margin-left: 0.25rem;
+
+    &:hover {
+      color: @white-color;
+      text-shadow: none;
+    }
   }
 }
 
