--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -19,8 +19,8 @@ tag-selection {
     color: @white-color;
     margin-left: 0.25rem;
 
-    &:hover {
-      color: @white-color;
+    &:hover, &:focus {
+      color: inherit;
       text-shadow: none;
     }
   }
