--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -42,7 +42,7 @@
   border-radius: 2px;
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #bbb;
+  border: 1px solid #757575;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
