--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -182,6 +182,10 @@
   padding: .25rem 8px;
 }
 
+.ms-drop ul>li:hover {
+  background-color: #eee;
+}
+
 .ms-drop ul>li .disabled {
   font-weight: normal !important;
   opacity: .35;
