--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -345,6 +345,7 @@ video {
   background-repeat-y: no-repeat;
   background-size: cover;
   background-position: center bottom;
+  background-color: #a6a6a6;
   padding: 54px 0 80px 0;
 }
 
@@ -354,38 +355,34 @@ video {
 
 .bg-picture-1 {
   background-image: url('https://www.ku.dk/statisk-grafik/baggrundsbilleder/bg-billede-1.jpg');
-  background-color: #a6a6a6;
 }
 
 .bg-picture-2 {
   background-image: url('https://www.ku.dk/statisk-grafik/baggrundsbilleder/bg-billede-2.jpg');
-  background-color: #a6a6a6;
 }
 
 .bg-picture-3 {
   background-image: url('https://www.ku.dk/statisk-grafik/baggrundsbilleder/bg-billede-3.jpg');
-  background-color: #a6a6a6;
 }
 
 .bg-picture-4 {
   background-image: url('https://www.ku.dk/statisk-grafik/baggrundsbilleder/bg-billede-4.jpg');
-  background-color: #a6a6a6;
 }
 
 .parallax-1 {
-  background: #a6a6a6 url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-1.jpg');
+  background-image: url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-1.jpg');
 }
 
 .parallax-2 {
-  background: #a6a6a6 url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-2.jpg');
+  background-image: url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-2.jpg');
 }
 
 .parallax-3 {
-  background: #a6a6a6 url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-3.jpg');
+  background-image: url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-3.jpg');
 }
 
 .parallax-4 {
-  background: #a6a6a6 url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-4.jpg');
+  background-image: url('https://www.ku.dk/statisk-grafik/parallax/bg-parallax-4.jpg');
 }
 
 /* .bg-parallax .gccolumn:first-child .gcitem:first-child, .bg-picture.double-column .gccolumn:first-child .gcitem:first-child {
