--- a/docs/_includes/ku-leftmenu.html
+++ b/docs/_includes/ku-leftmenu.html
@@ -5,6 +5,7 @@
   <nav aria-label="Navigation">
     <ul id="leftmenu" class="nav">
       <li><a tabindex="0" href="../ku-global-menus/">Global menus (top and footer)</a>
+      <li><a tabindex="-1" href="../ku-cookie-popup/">KU cookie popup</a></li>
       <li><a tabindex="-1" href="../ku-full-page/">Front page</a></li>
       <li><a tabindex="-1" href="#">KU page templates</a>
         <ul>
@@ -22,8 +23,7 @@
           <li><a tabindex="-1" href="../ku-newsboxes/">Template with news boxes</a></li>
           <li><a tabindex="-1" href="../ku-datatables/">Template with data tables</a></li>
           <li><a tabindex="-1" href="../ku-formvalidation/">Template with form validation</a></li>
-          <li><a tabindex="-1" href="../ku-loginpage/">Login page</a></li>
-          <li><a tabindex="-1" href="../ku-cookie-popup/">KU cookie popup</a>
+          <li><a tabindex="-1" href="../ku-loginpage/">Login page</a>
             <ul>
               <li><a tabindex="-1" href="../ku-courses/">Kurser.ku.dk</a>
               <li><a tabindex="-1" href="../ku-course-details/">Kursus detaljeside</a></li>
