--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -7,6 +7,11 @@
 <meta name="author" content="Københavns Universitet">
 <title>{{ page.title }} &middot; Bootstrap</title>
 <link rel="alternate" href="http://www.ku.dk" hreflang="da-dk">
+<style>
+.scripts-list li + li {
+  margin-top: 10px;
+}
+</style>
 {% if site.github %}
 <link rel="manifest" href="{{ site.baseurl }}/manifest.json">
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
