--- a/docs/_includes/nav/ku-nav.html
+++ b/docs/_includes/nav/ku-nav.html
@@ -48,17 +48,17 @@
           <ul aria-hidden="true" class="nyheder dropdown-menu">
 
           <li>
-              <img alt="Ekspedition i Arktis tog uventet drejning: Opdagede den nordligste ø i verden" src="../images/fallback/fallback-image.png">
+              <img alt="Ekspedition i Arktis tog uventet drejning: Opdagede den nordligste ø i verden" src="../../images/fallback/fallback-image.png">
               <a href="#">Ekspedition i Arktis tog uventet drejning: Opdagede den nordligste ø i verden</a>
               <div class="small">27.08.2021</div>
           </li>
           <li>
-              <img alt="Forskere bruger diamanter til at forstå kontinenternes fundament: ”Uden dét ville mennesket ikke eksistere”" src="../images/fallback/fallback-image.png">
+              <img alt="Forskere bruger diamanter til at forstå kontinenternes fundament: ”Uden dét ville mennesket ikke eksistere”" src="../../images/fallback/fallback-image.png">
               <a href="#" class="truncated">Forskere bruger diamanter til at forstå kontinenternes fundament: ”Uden dét ville men...</a>
               <div class="small">13.08.2021</div>
           </li>
           <li>
-              <img alt="Hundene cementerer deres position som danskernes foretrukne kæledyr" src="../images/fallback/fallback-image.png">
+              <img alt="Hundene cementerer deres position som danskernes foretrukne kæledyr" src="../../images/fallback/fallback-image.png">
               <a href="#">Hundene cementerer deres position som danskernes foretrukne kæledyr</a>
               <div class="small">12.08.2021</div>
           </li>
